# pmd_clever_note_bot

./: README.md  pyproject.toml  requirements.txt
pmd_clever_note/: app.py  handlers.py  i18n.py  settings.py  storage.py  utils.py
pmd_clever_note/tools/: base.py  food_diary.py  notes.py
